test/fail/vt_03.v3
//@execute 0=true; 1=false; 2=false; 3=true; 4=false
type vt_03 {
	case Int(i: int);
	case Bool(b: bool);
}
def x = vt_03.Int(11), y = vt_03.Int(12);
def main(a: int) -> bool {
	if (a == 0) return x == x;
	if (a == 1) return x == y;
	if (a == 2) return y == x;
	if (a == 3) return y == y;
	return false;
}
